# merino-devtools

./: CONTRIBUTING.md  README.md
tools/ap-logos/: .env.example  .gitignore  README.md  convert_to_200.py  pyproject.toml
tools/ap-logos/ap_logos/: auth.py  downloader.py  main.py  manifest.py  models.py  reference.py  search.py  vision.py
tools/ap-logos/data/: entities.csv
