[project]
name = "ap-logos"
version = "0.1.0"
description = "Fetch logos from AP Newsroom using Claude Vision to identify the correct images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "Pillow>=10.0",
    "playwright>=1.40",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
ap-logos = "ap_logos.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "B008",  # typer uses function calls in argument defaults by design
]

[tool.ruff.lint.isort]
known-first-party = ["ap_logos"]
